force-app/main/default/objects/Service_Document_Ids__mdt/fields/Service_Document_NL__c.field-meta.xml
<CustomField>
    <fullName>Service_Document_NL__c</fullName>
    <label>Service Document NL</label>
    <length>18</length>
    <type>Text</type>
</CustomField>