force-app/main/default/objects/Service_Document_Ids__mdt/fields/Service_Document_Without_Signature_FR__c.field-meta.xml
<CustomField>
    <fullName>Service_Document_Without_Signature_FR__c</fullName>
    <label>Service Document Without Signature FR</label>
    <length>18</length>
    <type>Text</type>
</CustomField>